--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "blogbuster",
   "version": "1.0.0",
   "description": "Reliable and Secure Blogging application with CRUD functionality",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Cherry",
   "license": "MIT",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
